Facebook 3.2.3~core4

	* [Bug] Fix the include order of the user login javascripts.
	* Add/standardize some supplemental javascript files for the various authentication sources.
	* Better handle the redirect URL for user logins and registrations.
	-- Charlie Powell <charlie@eval.bz>  Mon, 24 Nov 2014 22:59:39 -0500

Facebook 3.2.3~core3

	* Documentation cleanup.
	-- Charlie Powell <charlie@eval.bz>  Wed, 28 May 2014 19:39:51 -0400

Facebook 3.2.3~core2

	* [Security] Use the new systemlog instead of security log and some minor documentation updates.
	* Better handling of inactive and deactivated users.
	* New support for authentication icons.
	* Facebook is updated to use the new Core authentication features.
	* Extension on the UserAuth API, renderLogin; add the ability to change Form options on execution of
	  the method.
	* Some auth-driver compatibility fixes for Facebook.
	-- Charlie Powell <charlie@eval.bz>  Sat, 22 Mar 2014 14:56:46 -0400

Facebook 3.2.3~core1

	* Update to newest version of the Facebook API from upstream.
	* Hide the appropriate facebook user configs from the interface.
	* Facebook needs to use the new Auth driver register system too.
	* Implement the new userauth driver in the Facebook component.
	* Bump the copyright date to 2014.
	-- Charlie Powell <charlie@eval.bz>  Thu, 02 Jan 2014 11:01:38 -0500

Facebook 3.2.0~core8

	* Use the View instead of CurrentPage for attaching the HTML attribute.
	-- Charlie Powell <charlie@eval.bz>  Mon, 30 Sep 2013 00:04:08 -0400

Facebook 3.2.0~core7

	* Make use of the namespace versions of View instead of static.
	* New facebook button class, "facebook-button".
	-- Charlie Powell <charlie@eval.bz>  Sat, 31 Aug 2013 17:29:10 -0400

Facebook 3.2.0~core6

	* Updated some things to keep up with Core 2.5.7
	* Switched Gender to a selectbox instead of an open ended text field.
	-- Charlie Powell <charlie@eval.bz>  Wed, 12 Jun 2013 17:17:25 -0400

Facebook 3.2.0~core5
